# travel_agent_pro

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT_OVERVIEW.md  README.md  config.yaml  docker-compose.observability.yml  e2e-phase1-no-offtopic.spec.ts  e2e-retry-experience.spec.ts  e2e-send-button.spec.ts  e2e-test.spec.ts  e2e-waiting-experience.spec.ts  package-lock.json  package.json  playwright.config.ts  playwright.retry.config.ts  playwright.waiting.config.ts  snapshot-1.md  赵熙唯简历_Agent应用开发工程师_v0.1.html
backend/: config.py  main.py  pyproject.toml  run.py
backend/agent/: compaction.py  day_worker.py  hooks.py  internal_tasks.py  loop.py  narration.py  orchestrator.py  reflection.py  tool_choice.py  types.py  worker_prompt.py
backend/api/: schemas.py  trace.py
backend/context/: manager.py  soul.md
backend/evals/: failure_report.py  models.py  reranker.py  runner.py  stability.py
backend/harness/: feasibility.py  guardrail.py  judge.py  validator.py
backend/llm/: anthropic_provider.py  base.py  errors.py  factory.py  openai_provider.py  types.py
backend/memory/: archival.py  async_jobs.py  demo_seed.py  destination_normalization.py  embedding_provider.py  episode_slices.py  extraction.py  formatter.py  manager.py  models.py  policy.py  profile_normalization.py  recall_gate.py  recall_query.py  recall_query_adapter.py  recall_reranker.py  recall_signals.py  recall_stage3.py  recall_stage3_fusion.py  recall_stage3_lanes.py  recall_stage3_models.py  recall_stage3_normalizer.py  retrieval_candidates.py  retriever.py  store.py  symbolic_recall.py  v3_models.py  (+1 more)
(+584 files in other folders)
